--- a/index.html
+++ b/index.html
@@ -3,7 +3,190 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Korn l Fanmade Website by FatzRon</title>
+        <link rel="stylesheet" href="/style.css" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
     </head>
-    <body></body>
+    <body>
+        <main>
+            <div class="bigfatboy">
+                <div id="logo">
+                    <img
+                        class="logo"
+                        src="/images/1-korn-jason-kingsey.jpg"
+                        alt=""
+                    />
+                    <img
+                        class="grouppic"
+                        src="/images/korn-freak-leash-oral-history-br-remove.jpg"
+                        alt=""
+                    />
+                </div>
+                <header>
+                    <button>
+                        <a href="#logo">KoRn</a>
+                    </button>
+                    <button>
+                        <a href="#Members">Members</a>
+                    </button>
+                    <button><a href="#Discography">Discography</a></button>
+                </header>
+                <div class="membersec">
+                    <h1 id="Members">Members</h1>
+                    <div class="member">
+                        <img src="/images/JD.jpg" alt="Jonathan" />
+                        <div class="membername">
+                            <h1>Jonathan Davis</h1>
+                            <h2>Vocalist</h2>
+                            <p>
+                                (born January 18, 1971), also known as JD, is an
+                                American singer, songwriter, and musician. He is
+                                the lead vocalist and frontman of nu metal band
+                                Korn, which is considered a pioneering act of
+                                the nu metal genre. Davis's distinctive
+                                personality and Korn's music influenced a
+                                generation of musicians and performers who have
+                                come after them.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="memberbox">
+                        <div class="member">
+                            <img src="/images/head.jpg" alt="Head" />
+                            <div class="membername">
+                                <h1>Brian "Head" Welch</h1>
+                                <h2>Rythm Guitar</h2>
+                                <p>
+                                    (born June 19, 1970), is an American
+                                    musician. He is a guitarist and founding
+                                    member of the nu metal band Korn also
+                                    provides vocals. Along with Munky, Welch
+                                    helped develop Korn's distinctive sound (a
+                                    mix of sirenlike shards of dissonant guitar
+                                    that mimicked a turntablist's various
+                                    effects and rumbling down-tuned riffing)
+                                    that defined the nu metal aesthetic
+                                    beginning in the mid-'90s.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="memberbox">
+                        <div class="member">
+                            <img src="/images/munky.jpg" alt="Munky" />
+                            <div class="membername">
+                                <h1>James "Munky" Shaffer</h1>
+                                <h2>Lead Guitar</h2>
+                                <p>
+                                    (born June 6, 1970), is an American musician
+                                    best known as a co-founder and guitarist of
+                                    the nu metal band Korn. He was ranked at No.
+                                    26 of Guitar World's 100 Greatest Heavy
+                                    Metal Guitarists of All Time.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="memberbox">
+                        <div class="member">
+                            <img src="/images/fieldy.jpg" alt="Fieldy" />
+                            <div class="membername">
+                                <h1>Reginald "Fieldy" Arvisu</h1>
+                                <h2>Bassist</h2>
+                                <p>
+                                    (born November 2, 1969), Known for his
+                                    percussive, slap-heavy bass style, he has
+                                    also released solo rap and instrumental
+                                    projects and performed with the band
+                                    Stillwell.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="memberbox">
+                        <div class="member">
+                            <img src="/images/david.jpg" alt="David" />
+
+                            <div class="membername">
+                                <h1>David Silveria</h1>
+                                <h2>Drummer</h2>
+                                <p>
+                                    (born September 21, 1972) His drumming
+                                    style, which blended heavy metal with funk
+                                    and hip-hop influences, was a defining
+                                    element of Korn's early sound.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="albumsec">
+                    <h1 id="Discography">Discography</h1>
+                    <div class="album">
+                        <img src="/images/Korn-Korn.jpg" alt="Self-Title" />
+                        <a href="/pages/selftitle.html">KoRn</a>
+                        <h2>11 October 1994</h2>
+                    </div>
+                    <div class="album">
+                        <img
+                            src="/images/Korn-LifeIsPeachy.jpg"
+                            alt="LifeIsPeachy"
+                        />
+                        <a href="/pages/lifeispeachy.html">Life is Peachy</a>
+                        <h2>15 October 1996</h2>
+                    </div>
+                    <div class="album">
+                        <img
+                            src="/images/Korn_follow_the_leader.jpg"
+                            alt="FollowTheLeader"
+                        />
+                        <a href="/pages/followtheleader.html"
+                            >Follow The Leader</a
+                        >
+                        <h2>18 August 1998</h2>
+                    </div>
+                    <div class="album">
+                        <img src="/images/KoRnIssues.jpg" alt="Issues" />
+                        <a href="/pages/issues.html">Issues</a>
+                        <h2>16 November 1999</h2>
+                    </div>
+                </div>
+                <div class="album">
+                    <img
+                        src="/images/Unto_album_cover.jpg"
+                        alt="Untouchables"
+                    />
+                    <a href="/pages/untochables.html">Untouchables</a>
+                    <h2>11 June 2002</h2>
+                </div>
+                <div class="album">
+                    <img
+                        src="/images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
+                        alt="TALITM"
+                    />
+                    <a href="/pages/takealookinthemirror.html"
+                        >Take A Look In The Mirror</a
+                    >
+                    <h2>21 November 2003</h2>
+                </div>
+                <div class="album">
+                    <img
+                        src="/images/Korn_-_See_You_on_the_Other_Side.jpg"
+                        alt="TALITM"
+                    />
+                    <a href="/pages/seeyouontheotherside.html"
+                        >See You On The Other Side</a
+                    >
+                    <h2>6 December 2005</h2>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
