fix:style not apply

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Korn l Fanmade Website by FatzRon</title>
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="style.css" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +12,7 @@
             href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
+        <link rel="icon" href="images/logo.ico" type="image/x-icon" />
     </head>
     <body>
         <main>
@@ -20,12 +20,12 @@
                 <div id="logo">
                     <img
                         class="logo"
-                        src="/images/1-korn-jason-kingsey.jpg"
+                        src="images/1-korn-jason-kingsey.jpg"
                         alt=""
                     />
                     <img
                         class="grouppic"
-                        src="/images/korn-freak-leash-oral-history-br-remove.jpg"
+                        src="images/korn-freak-leash-oral-history-br-remove.jpg"
                         alt=""
                     />
                 </div>
@@ -41,7 +41,7 @@
                 <div class="membersec">
                     <h1 id="Members">Members</h1>
                     <div class="member">
-                        <img src="/images/JD.jpg" alt="Jonathan" />
+                        <img src="images/JD.jpg" alt="Jonathan" />
                         <div class="membername">
                             <h1>Jonathan Davis</h1>
                             <h2>Vocalist</h2>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="memberbox">
                         <div class="member">
-                            <img src="/images/head.jpg" alt="Head" />
+                            <img src="images/head.jpg" alt="Head" />
                             <div class="membername">
                                 <h1>Brian "Head" Welch</h1>
                                 <h2>Rythm Guitar</h2>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="memberbox">
                         <div class="member">
-                            <img src="/images/munky.jpg" alt="Munky" />
+                            <img src="images/munky.jpg" alt="Munky" />
                             <div class="membername">
                                 <h1>James "Munky" Shaffer</h1>
                                 <h2>Lead Guitar</h2>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="memberbox">
                         <div class="member">
-                            <img src="/images/fieldy.jpg" alt="Fieldy" />
+                            <img src="images/fieldy.jpg" alt="Fieldy" />
                             <div class="membername">
                                 <h1>Reginald "Fieldy" Arvisu</h1>
                                 <h2>Bassist</h2>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="memberbox">
                         <div class="member">
-                            <img src="/images/david.jpg" alt="David" />
+                            <img src="images/david.jpg" alt="David" />
 
                             <div class="membername">
                                 <h1>David Silveria</h1>
@@ -130,58 +130,55 @@
                 <div class="albumsec">
                     <h1 id="Discography">Discography</h1>
                     <div class="album">
-                        <img src="/images/Korn-Korn.jpg" alt="Self-Title" />
-                        <a href="/pages/selftitle.html">KoRn</a>
+                        <img src="images/Korn-Korn.jpg" alt="Self-Title" />
+                        <a href="pages/selftitle.html">KoRn</a>
                         <h2>11 October 1994</h2>
                     </div>
                     <div class="album">
                         <img
-                            src="/images/Korn-LifeIsPeachy.jpg"
+                            src="images/Korn-LifeIsPeachy.jpg"
                             alt="LifeIsPeachy"
                         />
-                        <a href="/pages/lifeispeachy.html">Life is Peachy</a>
+                        <a href="pages/lifeispeachy.html">Life is Peachy</a>
                         <h2>15 October 1996</h2>
                     </div>
                     <div class="album">
                         <img
-                            src="/images/Korn_follow_the_leader.jpg"
+                            src="images/Korn_follow_the_leader.jpg"
                             alt="FollowTheLeader"
                         />
-                        <a href="/pages/followtheleader.html"
+                        <a href="pages/followtheleader.html"
                             >Follow The Leader</a
                         >
                         <h2>18 August 1998</h2>
                     </div>
                     <div class="album">
-                        <img src="/images/KoRnIssues.jpg" alt="Issues" />
-                        <a href="/pages/issues.html">Issues</a>
+                        <img src="images/KoRnIssues.jpg" alt="Issues" />
+                        <a href="pages/issues.html">Issues</a>
                         <h2>16 November 1999</h2>
                     </div>
                 </div>
                 <div class="album">
-                    <img
-                        src="/images/Unto_album_cover.jpg"
-                        alt="Untouchables"
-                    />
-                    <a href="/pages/untochables.html">Untouchables</a>
+                    <img src="images/Unto_album_cover.jpg" alt="Untouchables" />
+                    <a href="pages/untochables.html">Untouchables</a>
                     <h2>11 June 2002</h2>
                 </div>
                 <div class="album">
                     <img
-                        src="/images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
+                        src="images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
                         alt="TALITM"
                     />
-                    <a href="/pages/takealookinthemirror.html"
+                    <a href="pages/takealookinthemirror.html"
                         >Take A Look In The Mirror</a
                     >
                     <h2>21 November 2003</h2>
                 </div>
                 <div class="album">
                     <img
-                        src="/images/Korn_-_See_You_on_the_Other_Side.jpg"
+                        src="images/Korn_-_See_You_on_the_Other_Side.jpg"
                         alt="TALITM"
                     />
-                    <a href="/pages/seeyouontheotherside.html"
+                    <a href="pages/seeyouontheotherside.html"
                         >See You On The Other Side</a
                     >
                     <h2>6 December 2005</h2>
