--- a/pages/lifeispeachy.html
+++ b/pages/lifeispeachy.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Korn l Fanmade Website by FatzRon</title>
         <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <a href="/pages/korn.html"
