--- a/pages/untochables.html
+++ b/pages/untochables.html
@@ -6,7 +6,7 @@
         <title>KoRn l Fanmade Website by FatzRon</title>
         <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
 
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <a href="/pages/korn.html"
