--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <h1 id="Discography">Discography</h1>
                     <div class="album">
                         <img src="images/Korn-Korn.jpg" alt="Self-Title" />
-                        <a href="pages/selftitle.html">KoRn</a>
+                        <a href="selftitle.html">KoRn</a>
                         <h2>11 October 1994</h2>
                     </div>
                     <div class="album">
@@ -139,7 +139,7 @@
                             src="images/Korn-LifeIsPeachy.jpg"
                             alt="LifeIsPeachy"
                         />
-                        <a href="pages/lifeispeachy.html">Life is Peachy</a>
+                        <a href="lifeispeachy.html">Life is Peachy</a>
                         <h2>15 October 1996</h2>
                     </div>
                     <div class="album">
@@ -147,20 +147,18 @@
                             src="images/Korn_follow_the_leader.jpg"
                             alt="FollowTheLeader"
                         />
-                        <a href="pages/followtheleader.html"
-                            >Follow The Leader</a
-                        >
+                        <a href="followtheleader.html">Follow The Leader</a>
                         <h2>18 August 1998</h2>
                     </div>
                     <div class="album">
                         <img src="images/KoRnIssues.jpg" alt="Issues" />
-                        <a href="pages/issues.html">Issues</a>
+                        <a href="issues.html">Issues</a>
                         <h2>16 November 1999</h2>
                     </div>
                 </div>
                 <div class="album">
                     <img src="images/Unto_album_cover.jpg" alt="Untouchables" />
-                    <a href="pages/untochables.html">Untouchables</a>
+                    <a href="untochables.html">Untouchables</a>
                     <h2>11 June 2002</h2>
                 </div>
                 <div class="album">
@@ -168,7 +166,7 @@
                         src="images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
                         alt="TALITM"
                     />
-                    <a href="pages/takealookinthemirror.html"
+                    <a href="takealookinthemirror.html"
                         >Take A Look In The Mirror</a
                     >
                     <h2>21 November 2003</h2>
@@ -178,7 +176,7 @@
                         src="images/Korn_-_See_You_on_the_Other_Side.jpg"
                         alt="TALITM"
                     />
-                    <a href="pages/seeyouontheotherside.html"
+                    <a href="seeyouontheotherside.html"
                         >See You On The Other Side</a
                     >
                     <h2>6 December 2005</h2>
