--- a/issues.html
+++ b/issues.html
@@ -3,95 +3,105 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>KoRn l Fanmade Website by FatzRon</title>
+        <title>Korn l Fanmade Website by FatzRon</title>
         <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/style.css" />
     </head>
     <body>
-        <a href="/pages/korn.html"
+        <a href="/korn.html"
             ><img width="32px" height="32px" src="/images/arrow.png" alt="back"
         /></a>
         <div class="fatboy">
             <div class="cover">
                 <a
-                    href="https://youtube.com/playlist?list=OLAK5uy_k3ri5gYXzXs3zZgFvb3anXVI-nwf2sTXg&si=UQfwV7pOlGjo-oeK"
+                    href="https://youtube.com/playlist?list=OLAK5uy_knRMkW5KNfpGu2F2o6qtT3pribkxdsDgM&si=_xx0VN6U63GsNfkr"
                     ><img
                         class="cover"
-                        src="/images/Unto_album_cover.jpg"
-                        alt="Untouchables"
+                        src="/images/KoRnIssues.jpg"
+                        alt="Issues"
                 /></a>
             </div>
             <div class="tracklist">
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/IQhVTcH6Hy0?si=q-hNnXS1WUeY2xyD"
-                    >1.Here to Stay</a
+                    >1.Dead</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/2s3iGpDqQpQ?si=Qgr_AZz-Ri7Xgegx"
-                    >2.Make Believe</a
+                    >2.Falling Away From Me</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/oH9qfBQZYSo?si=JQGwg6t6zbE05uqk"
-                    >3.Blame</a
+                    >3.Trash</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/BnfixOKISzc?si=O66l6iO2DyByyLI8"
-                    >4.Hollow Life</a
+                    >4.4U</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/1_tuNHEl-Do?si=2q3u6j6iBxaF10Y5"
-                    >5.Bottled Up Inside</a
+                    >5.Beg for Me</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/ujEph5vFwmc?si=y45VUHKcd2g5AZui"
-                    >6.Thoughtless</a
+                    >6.Make Me Bad</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/gf1syDprBII?si=6yn9_WtpRw98PfZ7"
-                    >7.Hating</a
+                    >7.It's Gonna Go Away</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/wU6pxz8oCdQ?si=j-reDMTXgvhpkoak"
-                    >8.One More Time</a
+                    >8.Wake Up</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/hDSz_9l4xgU?si=5foYa0IU3_dTH4GD"
-                    >9.Alone I Break</a
+                    >9.Am I Going Crazy</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/5Ez17h1EkK8?si=FO0-ueXq72AY07sP"
-                    >10.Embrace</a
+                    >10.Hey Daddy</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/FBEE-t-uyI0?si=XoWBiS26iAPtaLsZ"
-                    >11.Beat It Upright</a
+                    >11.Somebody Someone</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/OXgOSyLSydk?si=uoKr11Pmg170DeYp"
-                    >12.Wake Up Hate</a
+                    >12.No Way</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/nDKptWMsWSU?si=IxFtly42rWm-FrUG"
-                    >13.I'm Hiding</a
+                    >13.Let's Get This Party Started</a
                 >
                 <a
-                    class="untrack"
+                    class="issuetrack"
                     href="https://youtu.be/ecapikEoLio?si=CX1OhrfJLm-3UAfT"
-                    >14.No One's There</a
+                    >14.Wish You Could Be Me</a
+                >
+                <a
+                    class="issuetrack"
+                    href="https://youtu.be/Sq8JphupxhY?si=bqJMXPZ6sF9UfihD"
+                    >15.Counting</a
+                >
+                <a
+                    class="issuetrack"
+                    href="https://youtu.be/dLdk7ykYg-s?si=osgyehRqfHdYmiB8"
+                    >16.Dirty</a
                 >
             </div>
         </div>
