--- a/selftitle.html
+++ b/selftitle.html
@@ -6,10 +6,10 @@
         <title>Korn l Fanmade Website by FatzRon</title>
         <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/style.css" />
     </head>
     <body>
-        <a href="/pages/korn.html"
+        <a href="index.html"
             ><img
                 width="32px"
                 height="32px"
