--- a/followtheleader.html
+++ b/followtheleader.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="/korn.html"
+        <a href="index.html"
             ><img width="32px" height="32px" src="/images/arrow.png" alt="back"
         /></a>
         <div class="fatboy">
