--- a/followtheleader.html
+++ b/followtheleader.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Korn l Fanmade Website by FatzRon</title>
-        <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
+        <link rel="icon" href="images/logo.ico" type="image/x-icon" />
 
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <a href="index.html"
-            ><img width="32px" height="32px" src="/images/arrow.png" alt="back"
+            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
         /></a>
         <div class="fatboy">
             <div class="cover">
@@ -18,7 +18,7 @@
                     href="https://youtube.com/playlist?list=OLAK5uy_lN3gSClGJU--GAHceqHudhjb4id44kPY4&si=0UuRw5BmwT2SDgAW"
                     ><img
                         class="cover"
-                        src="/images/Korn_follow_the_leader.jpg"
+                        src="images/Korn_follow_the_leader.jpg"
                         alt="FollowTheLeader"
                 /></a>
             </div>
