--- a/lifeispeachy.html
+++ b/lifeispeachy.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Korn l Fanmade Website by FatzRon</title>
-        <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="icon" href="images/logo.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <a href="index.html"
-            ><img width="32px" height="32px" src="/images/arrow.png" alt="back"
+            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
         /></a>
         <div class="fatboy">
             <div class="cover">
