--- a/untochables.html
+++ b/untochables.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>KoRn l Fanmade Website by FatzRon</title>
-        <link rel="icon" href="/images/logo.ico" type="image/x-icon" />
+        <link rel="icon" href="images/logo.ico" type="image/x-icon" />
 
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <a href="index.html"
