--- a/issues.html
+++ b/issues.html
@@ -18,7 +18,7 @@
                     href="https://youtube.com/playlist?list=OLAK5uy_knRMkW5KNfpGu2F2o6qtT3pribkxdsDgM&si=_xx0VN6U63GsNfkr"
                     ><img
                         class="cover"
-                        src="/images/KoRnIssues.jpg"
+                        src="images/KoRnIssues.jpg"
                         alt="Issues"
                 /></a>
             </div>
