--- a/takealookinthemirror.html
+++ b/takealookinthemirror.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <a href="index.html"
-            ><img width="32px" height="32px" src="/images/arrow.png" alt="back"
+            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
         /></a>
         <div class="fatboy">
             <div class="cover">
