--- a/untochables.html
+++ b/untochables.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <a href="index.html"
-            ><img width="32px" height="32px" src="/images/arrow.png" alt="back"
+            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
         /></a>
         <div class="fatboy">
             <div class="cover">
@@ -18,7 +18,7 @@
                     href="https://youtube.com/playlist?list=OLAK5uy_k3ri5gYXzXs3zZgFvb3anXVI-nwf2sTXg&si=UQfwV7pOlGjo-oeK"
                     ><img
                         class="cover"
-                        src="/images/Unto_album_cover.jpg"
+                        src="images/Unto_album_cover.jpg"
                         alt="Untouchables"
                 /></a>
             </div>
