--- a/selftitle.html
+++ b/selftitle.html
@@ -13,7 +13,7 @@
             ><img
                 width="32px"
                 height="32px"
-                src="/images/arrow.png"
+                src="images/arrow.png"
                 alt="selftitle"
         /></a>
         <div class="fatboy">
@@ -22,7 +22,7 @@
                     href="https://youtube.com/playlist?list=OLAK5uy_lmmH5nhYjpyp1otjcC7OD-GAlG-n2C_bA&si=lRfdRKW8hkXizlij"
                     ><img
                         class="cover"
-                        src="/images/Korn-Korn.jpg"
+                        src="images/Korn-Korn.jpg"
                         alt="Self-Title"
                 /></a>
             </div>
