--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                         <a href="#Members">Members</a>
                     </button>
                     <button><a href="#Discography">Discography</a></button>
+                    <button>
+                        <a href="https://drslumz.github.io/The-Bung/">Merch</a>
+                    </button>
                 </header>
                 <div class="membersec">
                     <h1 id="Members">Members</h1>
