change:link can be click on the album cover

--- a/index.html
+++ b/index.html
@@ -133,55 +133,68 @@
                 <div class="albumsec">
                     <h1 id="Discography">Discography</h1>
                     <div class="album">
-                        <img src="images/Korn-Korn.jpg" alt="Self-Title" />
-                        <a href="selftitle.html">KoRn</a>
+                        <a class="album" href="selftitle.html">
+                            <img src="images/Korn-Korn.jpg" alt="Self-Title" />
+                            KoRn</a
+                        >
                         <h2>11 October 1994</h2>
                     </div>
                     <div class="album">
-                        <img
-                            src="images/Korn-LifeIsPeachy.jpg"
-                            alt="LifeIsPeachy"
-                        />
-                        <a href="lifeispeachy.html">Life is Peachy</a>
+                        <a class="album" href="lifeispeachy.html">
+                            <img
+                                src="images/Korn-LifeIsPeachy.jpg"
+                                alt="LifeIsPeachy"
+                            />
+                            Life is Peachy</a
+                        >
                         <h2>15 October 1996</h2>
                     </div>
                     <div class="album">
-                        <img
-                            src="images/Korn_follow_the_leader.jpg"
-                            alt="FollowTheLeader"
-                        />
-                        <a href="followtheleader.html">Follow The Leader</a>
+                        <a class="album" href="followtheleader.html">
+                            <img
+                                src="images/Korn_follow_the_leader.jpg"
+                                alt="FollowTheLeader"
+                            />
+                            Follow The Leader</a
+                        >
                         <h2>18 August 1998</h2>
                     </div>
                     <div class="album">
-                        <img src="images/KoRnIssues.jpg" alt="Issues" />
-                        <a href="issues.html">Issues</a>
+                        <a class="album" href="issues.html">
+                            <img src="images/KoRnIssues.jpg" alt="Issues" />
+                            Issues</a
+                        >
                         <h2>16 November 1999</h2>
                     </div>
                 </div>
                 <div class="album">
-                    <img src="images/Unto_album_cover.jpg" alt="Untouchables" />
-                    <a href="untochables.html">Untouchables</a>
+                    <a class="album" href="untochables.html">
+                        <img
+                            src="images/Unto_album_cover.jpg"
+                            alt="Untouchables"
+                        />
+                        Untouchables</a
+                    >
                     <h2>11 June 2002</h2>
                 </div>
                 <div class="album">
-                    <img
-                        src="images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
-                        alt="TALITM"
-                    />
-                    <a href="takealookinthemirror.html"
-                        >Take A Look In The Mirror</a
-                    >
+                    <a class="album" href="takealookinthemirror.html">
+                        <img
+                            src="images/Korn_-_Take_a_Look_in_the_Mirror.jpg"
+                            alt="TALITM"
+                        />
+                        Take A Look In The Mirror
+                    </a>
                     <h2>21 November 2003</h2>
                 </div>
                 <div class="album">
-                    <img
-                        src="images/Korn_-_See_You_on_the_Other_Side.jpg"
-                        alt="TALITM"
-                    />
-                    <a href="seeyouontheotherside.html"
-                        >See You On The Other Side</a
-                    >
+                    <a class="album" href="seeyouontheotherside.html">
+                        <img
+                            src="images/Korn_-_See_You_on_the_Other_Side.jpg"
+                            alt="SYOTOS"
+                        />
+                        See You On The Other Side
+                    </a>
                     <h2>6 December 2005</h2>
                 </div>
             </div>
